--- a/neurodesk_startup_scripts/template_jupyter_notebooks/Annotate EDF (OLD ).ipynb
+++ b/neurodesk_startup_scripts/template_jupyter_notebooks/Annotate EDF (OLD ).ipynb
@@ -26,9 +26,9 @@
     "import numpy as np\n",
     "%matplotlib qt5\n",
     "\n",
-    "#data = mne.io.read_raw_edf('NIA test.edf', infer_types=True, preload = True)\n",
-    "#data = data.notch_filter(freqs = 70)\n",
-    "#fig = data.plot(n_channels=50)"
+    "# data = mne.io.read_raw_edf('NIA test.edf', infer_types=True, preload = True)\n",
+    "# data = data.notch_filter(freqs = 70)\n",
+    "# fig = data.plot(n_channels=50)"
    ]
   },
   {
@@ -57,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "741a2639",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class mneClass(object):\n",
@@ -87,7 +91,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "b12f4e0b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -132,7 +140,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "83112d38",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -148,11 +160,11 @@
      "evalue": "'RawEDF' object has no attribute 'save_annotations'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/user/Desktop/storage/hello_again.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000004?line=1'>2</a>\u001b[0m testa\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mget_channel_types\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000004?line=2'>3</a>\u001b[0m testa\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mannotations\u001b[39m.\u001b[39msave(fname\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mannotation_test.csv\u001b[39m\u001b[39m\"\u001b[39m, overwrite\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000004?line=3'>4</a>\u001b[0m testa\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m\n",
-      "\u001b[1;32m/home/user/Desktop/storage/hello_again.ipynb Cell 3'\u001b[0m in \u001b[0;36mmneClass.data\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=12'>13</a>\u001b[0m \u001b[39m@data\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=13'>14</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdata\u001b[39m(\u001b[39mself\u001b[39m, value):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=14'>15</a>\u001b[0m     \u001b[39m# self._data = value\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=15'>16</a>\u001b[0m     \u001b[39m#self._observers.append(\"1\")\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=16'>17</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mTHIS HAS CHANGED\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=17'>18</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_data\u001b[39m.\u001b[39;49msave_annotations()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'RawEDF' object has no attribute 'save_annotations'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m/home/user/Desktop/storage/hello_again.ipynb Cell 5'\u001B[0m in \u001B[0;36m<cell line: 4>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000004?line=1'>2</a>\u001B[0m testa\u001B[39m.\u001B[39mdata\u001B[39m.\u001B[39mget_channel_types\n\u001B[1;32m      <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000004?line=2'>3</a>\u001B[0m testa\u001B[39m.\u001B[39mdata\u001B[39m.\u001B[39mannotations\u001B[39m.\u001B[39msave(fname\u001B[39m=\u001B[39m\u001B[39m\"\u001B[39m\u001B[39mannotation_test.csv\u001B[39m\u001B[39m\"\u001B[39m, overwrite\u001B[39m=\u001B[39m\u001B[39mTrue\u001B[39;00m)\n\u001B[0;32m----> <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000004?line=3'>4</a>\u001B[0m testa\u001B[39m.\u001B[39mdata \u001B[39m=\u001B[39m \u001B[39m3\u001B[39m\n",
+      "\u001B[1;32m/home/user/Desktop/storage/hello_again.ipynb Cell 3'\u001B[0m in \u001B[0;36mmneClass.data\u001B[0;34m(self, value)\u001B[0m\n\u001B[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=12'>13</a>\u001B[0m \u001B[39m@data\u001B[39m\u001B[39m.\u001B[39msetter\n\u001B[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=13'>14</a>\u001B[0m \u001B[39mdef\u001B[39;00m \u001B[39mdata\u001B[39m(\u001B[39mself\u001B[39m, value):\n\u001B[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=14'>15</a>\u001B[0m     \u001B[39m# self._data = value\u001B[39;00m\n\u001B[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=15'>16</a>\u001B[0m     \u001B[39m#self._observers.append(\"1\")\u001B[39;00m\n\u001B[1;32m     <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=16'>17</a>\u001B[0m     \u001B[39mprint\u001B[39m(\u001B[39m\"\u001B[39m\u001B[39mTHIS HAS CHANGED\u001B[39m\u001B[39m\"\u001B[39m)\n\u001B[0;32m---> <a href='vscode-notebook-cell:/home/user/Desktop/storage/hello_again.ipynb#ch0000002?line=17'>18</a>\u001B[0m     \u001B[39mself\u001B[39;49m\u001B[39m.\u001B[39;49m_data\u001B[39m.\u001B[39;49msave_annotations()\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'RawEDF' object has no attribute 'save_annotations'"
      ]
     }
    ],
@@ -160,7 +172,7 @@
     "print(testa.data.annotations)\n",
     "testa.data.get_channel_types\n",
     "testa.data.annotations.save(fname=\"annotation_test.csv\", overwrite=True)\n",
-    "testa.data = 3"
+    "testa.data = 3\n"
    ]
   }
  ],
