-Added template jupyter notebooks for annotations and bipolar reference both working and tested -Added new router file for hypothesis testing -Added a test edf file -Added final funciton for creation of jupyter notebooks

--- a/neurodesk_startup_scripts/template_jupyter_notebooks/EDF Analysis Annotate Template.ipynb
+++ b/neurodesk_startup_scripts/template_jupyter_notebooks/EDF Analysis Annotate Template.ipynb
@@ -7,16 +7,17 @@
    "source": [
     "import mne\n",
     "import time\n",
-    "\n",
+    "import threading\n",
     "%matplotlib qt5\n",
     "\n",
-    "data = mne.io.read_raw_edf('', infer_types=True, preload = True)\n",
+    "def autosave_annots():\n",
+    "    data.annotations.save(fname=\"annotation_test.csv\", overwrite=True)\n",
+    "    threading.Timer(5.0, autosave_annots).start()\n",
+    "data = mne.io.read_raw_edf('NIA test.edf', infer_types=True, preload = True)\n",
     "data = data.notch_filter(freqs = 70)\n",
     "fig = data.plot(n_channels=50)\n",
     "\n",
-    "while 1:\n",
-    "    data.annotations.save(fname=\"annotation_test.csv\", overwrite=True)\n",
-    "    time.sleep(5)\n"
+    "autosave_annots()"
    ],
    "metadata": {
     "collapsed": false,
